# ChangeLog for app-cdr/acetoneiso2
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
  +acetoneiso2-2.0.2.ebuild:
  Version bump to 2.0.2

  16 Mar 2008; Jakub Moc <jakub@gentoo.org> acetoneiso2-2.0.1.ebuild:
  Fix up dependencies a bit...

  12 Mar 2008; (Tommy[D]) tommy100@gmx.de -acetoneiso2-2.0.0.ebuild:
  Really drop it

  12 Mar 2008; Arne Janbu (Ampheus) <admin@ampheus.de> Manifest:
  Remove old version.

  12 Mar 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
  +acetoneiso2-2.0.1.ebuild:
  Version bump to 2.0.1.

  10 Mar 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
  acetoneiso2-2.0.0.ebuild:
  Changed dependency so we can use cdrtools or cdrkit if we want. Tanks
  Marcello Magaldi.

  30 Jan 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
  acetoneiso2-2.0.0.ebuild:
  Added sys-fs/fuseiso to DEPEND. Thanks to realmatrix.

  27 Jan 2008; Jakub Moc <jakub@gentoo.org> -acetoneiso2-2.0_rc1.ebuild,
  +acetoneiso2-2.0.0.ebuild:
  Version bump, remove old

  23 Jan 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
  acetoneiso2-2.0_rc1.ebuild:
  Some cleaning and changed the description

  18 Jan 2008; (Tommy[D]) tommy100@gmx.de ChangeLog:
  Drop emtpy files dir

  16 Jan 2008; (Tommy[D]) tommy100@gmx.de +acetoneiso2-2.0_rc1.ebuild,
  -acetoneiso2-2.0-r1.ebuild:
  Drop eutils.eclass, use PN in SRC_URI and correct ebuild naming

  16 Jan 2008; Arne Janbu (Ampheus) <admin@ampheus.de> +metadata.xml,
  +acetoneiso2-2.0-r1.ebuild:
  New Ebuild for bug 197961
