@@ -1,6 +1,4 @@
-DIST acetoneiso2_2.0.1-source.tar.gz 1078569 RMD160 68a3bd4c56e1324183ab7458e08e52f653971d9b SHA1 db3e28e77db916ba6b0f4d45d69406de00a9ba14 SHA256 85544073bdfc74dd359e76b413dad843007116098685291cb69f88cae73d4f73
 DIST acetoneiso2_2.0.2_source.tar.bz2 767635 RMD160 4a00b23be2438769bacfcda3cfa4f02a46db262b SHA1 036653d1dfbf21cae418b0fcfd91d99ac32d114c SHA256 5c2f5dda083941a567c47d1d4653e3e1460e5e8b4663446dd94abed7bd2885c8
-EBUILD acetoneiso2-2.0.1.ebuild 871 RMD160 e956ffa18cc6351f0b257bb31ac72c2976b4f6ea SHA1 e805789eb86ba74a42e550305da0987c6902bbec SHA256 6a6500a1e3092d7d42ee3d3af677157ce9855739bea6dad343ee4c50204ac678
 EBUILD acetoneiso2-2.0.2.ebuild 872 RMD160 7d07de423b451e610f8193f0405479737d8d320b SHA1 d7bc16a7a898946cdddcf1a5c1c69859c0a6b8a8 SHA256 4b39d3bffebd8e21e50a0811f0af8f57c99478cc957a303de6aede88f2774224
-MISC ChangeLog 1566 RMD160 0014dcdb8e774ced63c6539ee9e3471a0b093d36 SHA1 e3fb2cd86d516451275366ff084ec4a17e8e7d8e SHA256 ffc3d21f01daefe70d8e9b57dde2790e07c3d7dfc2010c0aff9b299fbf625568
+MISC ChangeLog 1673 RMD160 031985845a901e1d57104809bdda921f67b1b00a SHA1 f72e34b934d91e6ab44c2a2386902d7bdaede55c SHA256 7efb5d354eca30b598f6c575c4dd3bcff6abd8d62b3b9141c642a28add37c8c2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
