@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
+  -acetoneiso2-2.0.1.ebuild:
+  Remove old version
+
   03 Aug 2008; Arne Janbu (Ampheus) <admin@ampheus.de>
   +acetoneiso2-2.0.2.ebuild:
   Version bump to 2.0.2
